Prevent clipping for .App

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ body {
     background: #282c34;
 }
 
+body, html, #root {
+    height: 100%;
+    width: 100%;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
